--- a/src/styles/General.module.css
+++ b/src/styles/General.module.css
@@ -197,6 +197,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgb(159, 140, 118, 0.1);
+  scroll-margin-top: 80px;
 }
 
 
